TieDivLibrary: improvements (fixed IE z-index issue with spotlights, CSS classes for ads/spotlights)

--- a/wikia/branches/MW_AdEngine/skins/monaco/css/monaco_ltie7.css
+++ b/wikia/branches/MW_AdEngine/skins/monaco/css/monaco_ltie7.css
@@ -75,7 +75,7 @@ body.ltr #articleFooter ul.actions li div {
 /* user menu fix */
 #monaco_shrinkwrap_main,
 #wikia_page {
-	z-index: 1 !important;
+	z-index: 10 !important;
 }
 
 /* widget dashboard (#2397) */
@@ -103,4 +103,14 @@ body.ltr #articleFooter ul.actions li div {
 #wikia_header #headerButtonHub {
 	margin-left: 0 !important;
 	left: -50%;
+}
+
+/* ads */
+#FOOTER_SPOTLIGHT_LEFT, #FOOTER_SPOTLIGHT_MIDDLE, #FOOTER_SPOTLIGHT_RIGHT {
+	visibility: hidden;
+}
+
+#spotlight_footer {
+	height: 1px;
+	margin-bottom: 100px;
 }
